@@ -1,8 +1,10 @@
 package com.campus.client.ui.pages.facilities;
 
 import com.campus.client.services.mcp.CampusMcpClient;
+import com.campus.client.ui.components.Theme;
 
 import javafx.application.Platform;
+import javafx.collections.FXCollections;
 import javafx.geometry.Insets;
 import javafx.scene.control.*;
 import javafx.scene.layout.BorderPane;
@@ -11,33 +13,48 @@ import javafx.scene.layout.VBox;
 import javafx.scene.text.Font;
 import javafx.scene.text.FontWeight;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * FaciView - FR05: browse bookable campus facilities, read from the
- * campus://facilities MCP resource, with a simple text search filter.
+ * campus://facilities MCP resource.
  *
- * NOTE: the exact layout of facilities.txt wasn't available when this was
- * written, so entries are shown as raw text blocks (split on blank lines)
- * rather than parsed into strict fields. Tighten the parsing once you've
- * seen the real file, if you want structured columns instead.
+ * Parses the "[Bookable Resources]" pipe table (ROOM | TYPE | CAPACITY |
+ * BUILDING | OPEN | CLOSE) into a proper table, based on the real file
+ * format. Same MCP call as before (readResource("campus://facilities"));
+ * only how the result is displayed has changed.
  */
 public class FaciView extends BorderPane {
+
+    /** One row of the [Bookable Resources] table. */
+    public record FacilityRow(String room, String type, String capacity, String building,
+                               String open, String close) {
+        String typeLabel() {
+            return switch (type) {
+                case "discussion_room" -> "Discussion Room";
+                case "computer_lab" -> "Computer Lab";
+                case "study_pod" -> "Study Pod";
+                case "group_study_room" -> "Group Study Room";
+                case "sports_court", "basketball_court" -> "Sports Facility";
+                default -> type;
+            };
+        }
+    }
 
     private final CampusMcpClient mcpClient;
     private final ExecutorService worker;
 
     private final TextField searchField = new TextField();
-    private final ListView<String> resultsList = new ListView<>();
+    private final TableView<FacilityRow> table = new TableView<>();
     private final Label statusLabel = new Label();
     private final Button checkAvailabilityButton = new Button("Check Availability");
     private final Button backButton = new Button("Back");
 
-    private List<String> allEntries = List.of();
-    private Consumer<String> onCheckAvailability; // passes the selected facility's raw text block
+    private List<FacilityRow> allRows = List.of();
+    private Consumer<String> onCheckAvailability; // passes the selected room's building code
     private Runnable onBack;
 
     public FaciView(CampusMcpClient mcpClient, ExecutorService worker) {
@@ -56,131 +73,69 @@ public class FaciView extends BorderPane {
     public void setOnBack(Runnable r) { this.onBack = r; }
 
     private VBox buildHeader() {
-
         Label title = new Label("Browse Campus Facilities");
-        title.setFont(Font.font("System", FontWeight.BOLD, 22));
+        title.setFont(Font.font("Segoe UI", FontWeight.BOLD, 22));
 
         Label subtitle = new Label("Search and select a facility to check its availability.");
-        subtitle.setStyle("-fx-text-fill:#666666;");
+        subtitle.setStyle("-fx-text-fill:" + Theme.TEXT_MUTED + ";");
 
-        searchField.setPromptText("Search by facility name, building or type...");
+        searchField.setPromptText("Search by room, type, or building...");
+        searchField.setPrefHeight(36);
         searchField.textProperty().addListener((o, oldVal, newVal) -> applyFilter(newVal));
 
-        VBox box = new VBox(8);
-        box.getChildren().addAll(title, subtitle, searchField);
-        box.setPadding(new Insets(0,0,15,0));
-
+        VBox box = new VBox(8, title, subtitle, searchField);
+        box.setPadding(new Insets(0, 0, 15, 0));
         return box;
     }
 
+    @SuppressWarnings("unchecked")
     private VBox buildBody() {
+        TableColumn<FacilityRow, String> roomCol = new TableColumn<>("Room");
+        roomCol.setCellValueFactory(d -> new javafx.beans.property.SimpleStringProperty(d.getValue().room()));
 
-        resultsList.setPlaceholder(new Label("Loading facilities..."));
+        TableColumn<FacilityRow, String> typeCol = new TableColumn<>("Type");
+        typeCol.setCellValueFactory(d -> new javafx.beans.property.SimpleStringProperty(d.getValue().typeLabel()));
 
-        resultsList.setPrefHeight(420);
+        TableColumn<FacilityRow, String> capacityCol = new TableColumn<>("Capacity");
+        capacityCol.setCellValueFactory(d -> new javafx.beans.property.SimpleStringProperty(d.getValue().capacity()));
 
-        resultsList.setCellFactory(list -> new ListCell<>() {
+        TableColumn<FacilityRow, String> buildingCol = new TableColumn<>("Building");
+        buildingCol.setCellValueFactory(d -> new javafx.beans.property.SimpleStringProperty(d.getValue().building()));
 
-            @Override
-            protected void updateItem(String item, boolean empty) {
+        TableColumn<FacilityRow, String> hoursCol = new TableColumn<>("Opening Hours");
+        hoursCol.setCellValueFactory(d -> new javafx.beans.property.SimpleStringProperty(
+                d.getValue().open() + " - " + d.getValue().close()));
 
-                super.updateItem(item, empty);
+        table.getColumns().setAll(List.of(roomCol, typeCol, capacityCol, buildingCol, hoursCol));
+        table.setPlaceholder(new Label("Loading facilities..."));
+        table.setPrefHeight(420);
+        table.setStyle(Theme.card());
 
-                if (empty || item == null) {
-                    setGraphic(null);
-                    return;
-                }
-
-                VBox card = new VBox(6);
-                card.setPadding(new Insets(10));
-
-                card.setStyle(
-                        "-fx-background-color:white;" +
-                                "-fx-border-color:#DDDDDD;" +
-                                "-fx-border-radius:5;" +
-                                "-fx-background-radius:5;"
-                );
-
-                String[] lines = item.split("\\n");
-
-                String firstLine = lines.length > 0 ? lines[0] : "";
-
-                String icon = "🏢";
-
-                String lower = firstLine.toLowerCase();
-
-                if (lower.contains("computer"))
-                    icon = "💻";
-                else if (lower.contains("discussion"))
-                    icon = "👥";
-                else if (lower.contains("study"))
-                    icon = "📖";
-                else if (lower.contains("sport"))
-                    icon = "🏀";
-
-                Label title = new Label(icon + " " + firstLine);
-                title.setFont(Font.font("System", FontWeight.BOLD, 15));
-
-                VBox detailsBox = new VBox(2);
-
-                for (int i = 1; i < lines.length; i++) {
-                    Label l = new Label(lines[i]);
-                    l.setStyle("-fx-text-fill:#555555;");
-                    detailsBox.getChildren().add(l);
-                }
-
-                card.getChildren().addAll(title, detailsBox);
-
-                setGraphic(card);
-            }
-        });
-
-        VBox box = new VBox(10);
-        box.getChildren().add(resultsList);
-
+        VBox box = new VBox(10, table);
         return box;
     }
 
     private HBox buildActions() {
-
-        checkAvailabilityButton.setPrefWidth(170);
-        backButton.setPrefWidth(120);
-
-        checkAvailabilityButton.setStyle(
-                "-fx-background-color:#c62828;" +
-                        "-fx-text-fill:white;" +
-                        "-fx-font-weight:bold;"
-        );
-
-        backButton.setStyle(
-                "-fx-background-color:#eeeeee;"
-        );
+        checkAvailabilityButton.setStyle(Theme.primaryButton());
+        backButton.setStyle(Theme.secondaryButton());
 
         checkAvailabilityButton.setOnAction(e -> {
-
-            String selected = resultsList.getSelectionModel().getSelectedItem();
-
+            FacilityRow selected = table.getSelectionModel().getSelectedItem();
             if (selected == null) {
                 statusLabel.setText("Please select a facility.");
                 return;
             }
-
             if (onCheckAvailability != null) {
-                onCheckAvailability.accept(selected);
+                onCheckAvailability.accept(selected.building());
             }
         });
 
-        backButton.setOnAction(e -> {
-            if (onBack != null)
-                onBack.run();
-        });
+        backButton.setOnAction(e -> { if (onBack != null) onBack.run(); });
 
         HBox buttons = new HBox(10, checkAvailabilityButton, backButton);
-        buttons.setPadding(new Insets(15,0,0,0));
+        buttons.setPadding(new Insets(15, 0, 0, 0));
 
-        VBox wrapper = new VBox(8);
-        wrapper.getChildren().addAll(buttons, statusLabel);
-
+        VBox wrapper = new VBox(8, buttons, statusLabel);
         return new HBox(wrapper);
     }
 
@@ -189,12 +144,12 @@ public class FaciView extends BorderPane {
         worker.submit(() -> {
             try {
                 String text = mcpClient.readResource("campus://facilities");
-                List<String> entries = splitIntoEntries(text);
+                List<FacilityRow> rows = parseBookableResources(text);
                 Platform.runLater(() -> {
-                    allEntries = entries;
-                    resultsList.setItems(javafx.collections.FXCollections.observableArrayList(entries));
-                    resultsList.setPlaceholder(new Label("No facilities found."));
-                    statusLabel.setText(entries.size() + " facilities loaded.");
+                    allRows = rows;
+                    table.setItems(FXCollections.observableArrayList(rows));
+                    table.setPlaceholder(new Label("No facilities found."));
+                    statusLabel.setText(rows.size() + " facilities loaded.");
                 });
             } catch (Exception ex) {
                 Platform.runLater(() -> statusLabel.setText("Could not load facilities: " + ex.getMessage()));
@@ -202,24 +157,59 @@ public class FaciView extends BorderPane {
         });
     }
 
-    /** Splits the resource's raw text into readable chunks, one per blank-line-separated block. */
-    private List<String> splitIntoEntries(String text) {
-        if (text == null || text.isBlank()) return List.of();
-        return List.of(text.split("\\n\\s*\\n")).stream()
-                .map(String::trim)
-                .filter(s -> !s.isEmpty())
-                .collect(Collectors.toList());
+    /**
+     * Parses the "[Bookable Resources]" section of facilities.txt:
+     * a header line (ROOM | TYPE | CAPACITY | BUILDING | OPEN | CLOSE)
+     * followed by one pipe-delimited row per bookable room.
+     */
+    private List<FacilityRow> parseBookableResources(String text) {
+        List<FacilityRow> rows = new ArrayList<>();
+        if (text == null || text.isBlank()) return rows;
+
+        String[] lines = text.split("\\n");
+        boolean inTable = false;
+        boolean headerSkipped = false;
+
+        for (String rawLine : lines) {
+            String line = rawLine.trim();
+
+            if (line.startsWith("[Bookable Resources]")) {
+                inTable = true;
+                headerSkipped = false;
+                continue;
+            }
+            if (line.startsWith("[") && inTable) {
+                break; // reached the next section
+            }
+            if (!inTable || line.isEmpty()) {
+                continue;
+            }
+            if (!headerSkipped) {
+                headerSkipped = true; // skip the "ROOM | TYPE | ..." header row
+                continue;
+            }
+
+            String[] parts = line.split("\\|");
+            if (parts.length >= 6) {
+                rows.add(new FacilityRow(
+                        parts[0].trim(), parts[1].trim(), parts[2].trim(),
+                        parts[3].trim(), parts[4].trim(), parts[5].trim()));
+            }
+        }
+        return rows;
     }
 
     private void applyFilter(String query) {
         if (query == null || query.isBlank()) {
-            resultsList.setItems(javafx.collections.FXCollections.observableArrayList(allEntries));
+            table.setItems(FXCollections.observableArrayList(allRows));
             return;
         }
         String q = query.toLowerCase();
-        List<String> filtered = allEntries.stream()
-                .filter(e -> e.toLowerCase().contains(q))
-                .collect(Collectors.toList());
-        resultsList.setItems(javafx.collections.FXCollections.observableArrayList(filtered));
+        List<FacilityRow> filtered = allRows.stream()
+                .filter(r -> r.room().toLowerCase().contains(q)
+                        || r.typeLabel().toLowerCase().contains(q)
+                        || r.building().toLowerCase().contains(q))
+                .toList();
+        table.setItems(FXCollections.observableArrayList(filtered));
     }
 }
